--- a/remix-host/package.json
+++ b/remix-host/package.json
@@ -21,13 +21,14 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
+    "remix": "^1.6.1",
     "require-from-string": "^2.0.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
+    "@remix-run/dev": "^1.6.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.1.2"
   },
   "engines": {
