--- a/remix-remote/package.json
+++ b/remix-remote/package.json
@@ -13,18 +13,18 @@
     "start:dev": "cross-env PORT=3001 NODE_ENV=development node server/index.js"
   },
   "dependencies": {
-    "@remix-run/react": "^1.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remix": "^1.1.3",
     "@remix-run/express": "^1.1.3",
+    "@remix-run/react": "^1.1.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remix": "^1.6.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
+    "@remix-run/dev": "^1.6.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "typescript": "^4.1.2"
