--- a/remix-host/package.json
+++ b/remix-host/package.json
@@ -7,10 +7,11 @@
     "build": "npm run clean:build && remix build",
     "build:dev": "npm run clean:build && NODE_ENV=development remix build",
     "clean:build": "rm -rf server/build && rm -rf public/build",
-    "dev": "remix watch",
+    "dev": "run-p dev:*",
+    "dev:remix": "remix watch",
+    "dev:start": "cross-env NODE_ENV=development node server/index.js",
     "postinstall": "remix setup node",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "start:dev": "cross-env NODE_ENV=development node server/index.js"
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "dependencies": {
     "@remix-run/express": "^1.1.3",
